--- a/IG1App/IG1App.vcxproj
+++ b/IG1App/IG1App.vcxproj
@@ -125,6 +125,7 @@
     <ClInclude Include="Entity.h" />
     <ClInclude Include="IG1App.h" />
     <ClInclude Include="Light.h" />
+    <ClInclude Include="Material.h" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="Pixmap32RGBA.h" />
     <ClInclude Include="Scene.h" />
@@ -137,6 +138,7 @@
     <ClCompile Include="IG1App.cpp" />
     <ClCompile Include="Light.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Material.cpp" />
     <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="Pixmap32RGBA.cpp" />
     <ClCompile Include="Scene.cpp" />
